samples/_failures_safe/1761602548_3b1a3c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16fb6ce6.c: In function ‘main’:
./samples/SAFE/__tmp_16fb6ce6.c:198:9: error: expected expression at end of input
  198 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_16fb6ce6.c:198:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_16fb6ce6.c:198:9: error: expected declaration or statement at end of input
